@@ -587,6 +587,7 @@ Here is a list of currently defined properties:
     </li><li>max.buffered
     </li><li>directory
     </li><li>ram.flush.mb
+    </li><li>codec.postingsFormat (eg Direct) Note: no codec should be specified through default.codec
     </li></ul>
   </li>
 
