@@ -71,6 +71,34 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|codecs
+operator|.
+name|PostingsFormat
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|codecs
+operator|.
+name|lucene49
+operator|.
+name|Lucene49Codec
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|index
 operator|.
 name|ConcurrentMergeScheduler
@@ -757,6 +785,88 @@ argument_list|(
 literal|"Couldn't instantiate Codec: "
 operator|+
 name|defaultCodec
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+specifier|final
+name|String
+name|postingsFormat
+init|=
+name|config
+operator|.
+name|get
+argument_list|(
+literal|"codec.postingsFormat"
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|defaultCodec
+operator|==
+literal|null
+operator|&&
+name|postingsFormat
+operator|!=
+literal|null
+condition|)
+block|{
+try|try
+block|{
+specifier|final
+name|PostingsFormat
+name|postingsFormatChosen
+init|=
+name|PostingsFormat
+operator|.
+name|forName
+argument_list|(
+name|postingsFormat
+argument_list|)
+decl_stmt|;
+name|iwConf
+operator|.
+name|setCodec
+argument_list|(
+operator|new
+name|Lucene49Codec
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|PostingsFormat
+name|getPostingsFormatForField
+parameter_list|(
+name|String
+name|field
+parameter_list|)
+block|{
+return|return
+name|postingsFormatChosen
+return|;
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Couldn't instantiate Postings Format: "
+operator|+
+name|postingsFormat
 argument_list|,
 name|e
 argument_list|)
